# messenger

./: .dockerignore  .env.example  .env.production.example  .gitignore  AXUM_UPGRADE_12.md  AXUM_UPGRADE_13.md  Caddyfile.lan  Dockerfile  FINAL_RUNTIME_FIXES.md  Procfile  README.md  UPGRADE_10.md  UPGRADE_11.md  UPGRADE_12.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  requirements.txt  snm-dev.cmd  snm-dev.sh
config/: admin_autoregistry.py  admin_control.py  admin_gate.py  api.py  asgi.py  authentication.py  celery.py  centralization.py  centralization_views.py  frontend.py  health.py  logging_utils.py  middleware.py  remote_model_admin.py  settings.py  throttling.py  urls.py
docs/: API_CONTRACT.md  API_FRONTEND_GUIDE.md  AXUM_APPROVED_ATTACHMENTS.md  AXUM_CALL_RUNTIME.md  AXUM_CONVERSATION_COMMANDS.md  AXUM_DIRECT_CUTOVER.md  AXUM_DIRECT_JETSTREAM_PUBLISHING.md  AXUM_HOT_PATH_CONSOLIDATION.md  AXUM_MESSAGE_MUTATIONS.md  AXUM_SETUP_COMPLETE.md  AXUM_SUPPORT_DATA_PLANE.md  AXUM_UPGRADE_10.md  AXUM_UPGRADE_11.md  DJANGO_EFFICIENCY.md  FINAL_EFFICIENCY_HARDENING.md  LOAD_TESTING.md  MESSENGER_UI_ARCHITECTURE.md  OPERATIONS_RUNBOOK.md  REALTIME_PROTOCOL_V1.md  RUST_DATA_PLANE.md  RUST_MEDIA_WORKER.md  SUPPORT_ANALYTICS_FEEDBACK.md  SUPPORT_CONVERSATIONS.md  SUPPORT_DATA_GOVERNANCE.md  SUPPORT_FINAL_ACCEPTANCE_CHECKLIST.md  SUPPORT_FINAL_PRODUCTION_HANDOFF.md  SUPPORT_GUEST_CALLS.md  SUPPORT_INVITATION_EMAIL_DELIVERY.md  SUPPORT_KNOWLEDGE_BASE.md  SUPPORT_MEDIA.md  SUPPORT_REALTIME.md  SUPPORT_UPGRADE_01_BASELINE.md  SUPPORT_UPGRADE_02_DESIGN_SYSTEM.md  SUPPORT_UPGRADE_03_WEBSITES.md  SUPPORT_UPGRADE_04_TEAMS.md  SUPPORT_UPGRADE_05_ROUTING.md  SUPPORT_UPGRADE_06_KNOWLEDGE.md  SUPPORT_UPGRADE_07_LIFECYCLE.md  SUPPORT_UPGRADE_08_SLA.md  SUPPORT_UPGRADE_09_ANALYTICS.md  (+7 more)
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.call-tests.json  tsconfig.contacts-groups-tests.json  tsconfig.navigation-tests.json  tsconfig.pagination-tests.json  tsconfig.timeline-tests.json  tsconfig.upload-tests.json  vite.config.ts
loadtests/: README.md  (+1 more)
media-worker/: .dockerignore  Cargo.toml  Dockerfile
media-worker/src/: config.rs  db.rs  main.rs  process.rs  storage.rs
realtime/: Cargo.toml  Dockerfile
realtime/src/: admission.rs  attachments.rs  auth.rs  call_commands.rs  call_runtime.rs  call_signal_store.rs  chat_reads.rs  command_auth.rs  command_delivery.rs  commands.rs  config.rs  conversation_commands.rs  database.rs  main.rs  message_interactions.rs  message_mutations.rs  nats_connection.rs  nats_core.rs  nats_durable_publish.rs  nats_jetstream.rs  nats_probe.rs  ownership.rs  presence.rs  protocol.rs  redis_stream.rs  registry.rs  session_limit.rs  state.rs  support_data.rs  support_signal_store.rs  websocket.rs
(+510 files in other folders)
