[package]
name = "crescentsphere-media-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.10"
futures-util = "0.3"
object_store = { version = "0.12.4", features = ["aws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
time = { version = "=0.3.36", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
