[package]
name = "crescentsphere-realtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.9", features = ["ws", "macros"] }
dashmap = "6.1"
futures-util = "0.3"
jsonwebtoken = "9.3.1"
redis = { version = "0.32.7", features = ["tokio-comp", "aio", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "=0.3.36", features = ["formatting"] }
url = "2.5"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
